--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Template for rsapp task",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src/ --fix",
+    "format": "prettier --write src/",
     "test": "mocha test",
     "postinstall": "node postinstall.js"
   },
@@ -25,5 +27,11 @@
     "colors": "^1.4.0",
     "mocha": "^6.2.2",
     "semver": "^6.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "mocha": "^3.2.0",
+    "prettier": "^2.2.1"
   }
 }
